--- a/client/views/home.html
+++ b/client/views/home.html
@@ -2,7 +2,7 @@
 	<div class="jumbotron container-fluid">
 		<div class="container text-center">
 			<div class="row">
-				<h1>We Work Meteor</h1>
+				<!--<h1>Settings</h1>-->
 			</div>
 			<div class="row">
 				<br>
@@ -17,29 +17,17 @@
 			</div>
 			<div class="row">
 				<p>
-					The premier job board and developer community space specifically for <a href="http://www.meteor.com/">Meteor</a>.
-					<br><br>
-					Browse the <a href="{{pathFor 'jobs'}}">{{getPublishedCount 'jobs'}} active job postings</a> or <a href="{{pathFor 'profileNew'}}">create your profile</a> to join the <a href="{{pathFor 'profiles'}}">{{getPublishedCount 'developers'}} registered developers</a>.
+					Enter your school
+					<!--<a href="http://www.meteor.com/">Meteor</a>.-->
+					<!--<br><br>-->
+					<!--Browse the <a href="{{pathFor 'jobs'}}">{{getPublishedCount 'jobs'}} active job postings</a> or <a href="{{pathFor 'profileNew'}}">create your profile</a> to join the <a href="{{pathFor 'profiles'}}">{{getPublishedCount 'developers'}} registered developers</a>.-->
 				</p>
 			</div>
 			
 			<div id="callToAction" class="row">
-				<a class="col-sm-4 col-sm-offset-1 col-xs-12 text-center btn btn-primary btn-md" role="button" href="{{pathFor 'jobNew'}}">Post A Job</a>
-				<a class="col-sm-4 col-sm-offset-2 col-xs-12 text-center btn btn-success btn-md" role="button" href="{{pathFor 'profileNew'}}">Create a Profile</a>
+				<a class="col-sm-4 col-sm-offset-2 col-xs-12 text-center btn btn-success btn-md" role="button" href="{{pathFor 'profileNew'}}">Save</a>
 			</div>
 		</div>
 	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				{{>jobsRecent}}
-			</div>
-		</div>
-		<hr>
-		<div class="row">
-			<div class="col-sm-12">
-				{{>profilesRecent}}
-			</div>
-		</div>
-	</div>
+
 </template>
