--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -1,4 +1,5 @@
 <template name="header">
+  {{#unless isHome}}
     <section id="header">
         {{>connectionBanner}}
         <nav class="navbar navbar-default" role="navigation">
@@ -41,6 +42,7 @@
             <!-- /.container-fluid -->
         </nav>
     </section>
+  {{/unless}}
 </template>
 <template name="headerUserMenu">
     <li id="user-drop-down" class="dropdown">
