--- a/client/views/account_setup/tags_setup.html
+++ b/client/views/account_setup/tags_setup.html
@@ -2,6 +2,6 @@
   tags setup
 
   <br/>
-  <a href="/mon-ecole" class="next">&lt; Précédent</a>
+  <a href="/mon-ecole" class="prev">&lt; Précédent</a>
   <a href="/mon-alerte-offre" class="next">Suivant ></a>
 </template>
