--- a/client/views/main.less
+++ b/client/views/main.less
@@ -166,3 +166,16 @@ footer {
         min-height: 300px;
     }
 }
+
+a.prev, a.next {
+  position: absolute;
+  bottom: 20px;
+}
+
+a.prev {
+  left: 80px;
+}
+
+a.next {
+  right: 80px;
+}
