--- a/client/views/account_setup/alert_setup.html
+++ b/client/views/account_setup/alert_setup.html
@@ -1,7 +1,7 @@
 <template name="alertSetup">
-  school setup
+  alert setup
 
   <br/>
-  <a href="/mes-tags" class="next">&lt; Précédent</a>
+  <a href="/mes-tags" class="prev">&lt; Précédent</a>
   <a href="/offres" class="next">Suivant ></a>
 </template>
