--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,19 +1,22 @@
 <template name="home">
   <div class="homepage">
+    <div class="homepage-content">
 
-    <img src="/images/homepage-logo.png" width="100%" height="auto" alt="" />
+      <center>
+        <img src="/images/homepage-logo.png" width="100%" height="auto" class="app-logo" alt="" />
+      </center>
+      <div class="homepage__tagline">Ton stage dans ton smartphone</div>
 
-    <div class="homepage__tagline">Ton stage dans ton smartphone</div>
-
-    <div class="homepage__button">
-      <a href="/sign-in" class="btn btn-home btn-half pull-left">Sign In</a>
-      <a href="/sign-up" class="btn btn-home btn-half pull-right">Sign Up</a>
-      <div class="btn btn-home btn-all clear">
-        <img src="/images/picto-jobteaser.png" width="20" height="20" alt="" />
-        Connect with JobTeaser.com
+      <div class="homepage__button">
+        <a href="/sign-in" class="btn btn-home btn-half pull-left">Sign In</a>
+        <a href="/sign-up" class="btn btn-home btn-half pull-right">Sign Up</a>
+        <div class="btn btn-home btn-all clear">
+          <img src="/images/picto-jobteaser.png" width="20" height="20" alt="" />
+          Connect with JobTeaser.com
+        </div>
       </div>
-    </div>
 
+    </div>
   </div>
 
 </template>
