school setup done

--- a/client/views/account_setup/alert_setup.html
+++ b/client/views/account_setup/alert_setup.html
@@ -2,6 +2,8 @@
   alert setup
 
   <br/>
-  <a href="/mes-tags" class="prev">&lt; Précédent</a>
-  <a href="/offres" class="next">Suivant ></a>
+  <div class="col-md-12 text-center">
+    <a href="/mes-tags" class="btn prev">&lt; Précédent</a>
+    <a href="/offres" class="btn btn-primary next">Suivant ></a>
+  </div>
 </template>
