--- a/client/views/account_setup/tags_setup.html
+++ b/client/views/account_setup/tags_setup.html
@@ -2,6 +2,8 @@
   tags setup
 
   <br/>
-  <a href="/mon-ecole" class="prev">&lt; Précédent</a>
-  <a href="/mon-alerte-offre" class="next">Suivant ></a>
+  <div class="col-md-12 text-center">
+    <a href="/mon-ecole" class="btn prev">&lt; Précédent</a>
+    <a href="/mon-alerte-offre" class="btn btn-primary next">Suivant ></a>
+  </div>
 </template>
