--- a/client/views/main.less
+++ b/client/views/main.less
@@ -167,19 +167,6 @@ footer {
     }
 }
 
-a.prev, a.next {
-  position: absolute;
-  bottom: 20px;
-}
-
-a.prev {
-  left: 80px;
-}
-
-a.next {
-  right: 80px;
-}
-
 // HOMEPAGE
 body,
 html,
@@ -289,4 +276,9 @@ html,
       color: #d9aaec;
     }
   }
+}
+
+// Fix btn hover
+a.btn.prev:hover {
+  color:@brand-primary !important;
 }
