--- a/client/views/account_setup/school_setup.html
+++ b/client/views/account_setup/school_setup.html
@@ -1,26 +1,24 @@
 <template name="schoolSetup">
 
-  <select class="form-control" id="schools" placeholder="Ecole...">
-    <option value="">Ecole...</option>
-    {{#each schools}}
-      <option value="{{name}}">{{name}}</option>
-    {{/each}}
-  </select>
+  <center>
+    <h1>Mon école</h1>
+  </center>
+  <div class="form-container">
+    <select class="form-control" id="schools" placeholder="Ecole...">
+      <option value="">Ecole...</option>
+      {{#each schools}}
+        <option value="{{name}}">{{name}}</option>
+      {{/each}}
+    </select>
+
+    <br/>
+
+    <select class="form-control" id="specialities" placeholder="Spécialité...">
+    </select>
+  </div>
 
   <br/>
 
-  <select class="form-control" id="specialities" placeholder="Spécialité...">
-  </select>
-
-  <!--<div class="form-group">-->
-  <!--<input class="form-control typeahead" name="team" type="text"-->
-  <!--placeholder="NBA and NHL teams"-->
-  <!--autocomplete="on" spellcheck="off"-->
-  <!--data-sets="schools"/>-->
-  <!--</div>-->
-
-
-  <br/>
   <div class="col-md-12 text-center">
     <a href="/" class="btn prev">&lt; Précédent</a>
     <a href="/mes-tags" class="btn btn-primary next">Suivant ></a>
