--- a/client/views/account_setup/tags_setup.html
+++ b/client/views/account_setup/tags_setup.html
@@ -1,7 +1,21 @@
 <template name="tagsSetup">
-  tags setup
+
+  <center>
+    <h1>Ma formation et compétences</h1>
+  </center>
+
+  <div class="form-container">
+    <select id="tags" name="tags" multiple="multiple" class="demo-default selectized"
+            style="margin: 0 auto;max-width: 600px;" placeholder="tag...">
+
+      {{#each tags}}
+        <option value="{{name}}">{{name}}</option>
+      {{/each}}
+    </select>
+  </div>
 
   <br/>
+
   <div class="col-md-12 text-center">
     <a href="/mon-ecole" class="btn prev">&lt; Précédent</a>
     <a href="/mon-alerte-offre" class="btn btn-primary next">Suivant ></a>
