--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
-{{#unless isHome}}
+{{#if showHeaderFooter}}
 	<footer class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 text-center">
@@ -27,5 +27,5 @@
 			</div>
 		</div>
 	</footer>
-{{/unless}}
+{{/if}}
 </template>
