--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-  {{#unless isHome}}
+  {{#if showHeaderFooter}}
     <section id="header">
         {{>connectionBanner}}
         <nav class="navbar navbar-default" role="navigation">
@@ -17,15 +17,15 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="{{isActiveRoute regex='^jobs$'}}"><a href="{{pathFor 'jobs'}}">Jobs</a></li>
-                        <li class="{{isActiveRoute regex='profiles'}}"><a href="{{pathFor 'profiles'}}">Developers</a></li>
+                        <li class="{{isActiveRoute regex='^jobs$'}}"><a href="{{pathFor 'jobs'}}">Offres</a></li>
+                        <!--<li class="{{isActiveRoute regex='profiles'}}"><a href="{{pathFor 'profiles'}}">Developers</a></li>-->
                         {{#if currentUser}}
-                            <li class="{{isActiveRoute regex='jobNew'}}"><a href="{{pathFor 'jobNew'}}">Post a Job</a></li>
-                            {{#unless currentUser.isDeveloper}}
-                                <li class="{{isActiveRoute regex='^profile$'}}">
-                                    <a href="{{pathFor 'profileNew'}}">Create Developer Profile</a>
-                                </li>
-                            {{/unless}}
+                            <!--<li class="{{isActiveRoute regex='jobNew'}}"><a href="{{pathFor 'jobNew'}}">Post a Job</a></li>-->
+                            <!--{{#unless currentUser.isDeveloper}}-->
+                                <!--<li class="{{isActiveRoute regex='^profile$'}}">-->
+                                    <!--<a href="{{pathFor 'profileNew'}}">Create Developer Profile</a>-->
+                                <!--</li>-->
+                            <!--{{/unless}}-->
                         {{/if}}
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
@@ -42,7 +42,7 @@
             <!-- /.container-fluid -->
         </nav>
     </section>
-  {{/unless}}
+  {{/if}}
 </template>
 <template name="headerUserMenu">
     <li id="user-drop-down" class="dropdown">
@@ -50,26 +50,27 @@
 			{{> avatar user=currentUser size="small"}}{{currentUserDisplayName}} <span class="caret"></span>
 		</a>
         <ul class="dropdown-menu" role="menu">
-            <li>
-                <a href="{{pathFor 'myJobs'}}"><i class="fa fa-building fa-fw"></i> My Posted Jobs</a>
-            </li>
+            <!--<li>-->
+                <!--<a href="{{pathFor 'myJobs'}}"><i class="fa fa-building fa-fw"></i> My Posted Jobs</a>-->
+            <!--</li>-->
             <li class="divider"></li>
             {{#if isInRole 'admin'}}
                 <li><a href="/admin"><i class="fa fa-cogs fa-fw"></i> Admin</a></li>
                 <li class="divider"></li>
             {{/if}}
             {{#if currentUser.isDeveloper}}
-                <li>
-                    {{#with profile}}<a href="{{pathFor 'profile'}}"><i class="fa fa-rocket fa-fw"></i> Developer Profile</a>{{/with}}
-                </li>
-            {{else}}
-                <li>
-                    <a href="{{pathFor 'profileNew'}}"><i class="fa fa-rocket fa-fw"></i> Create Developer Profile</a>
-                </li>
+                <!--<li>-->
+                    <!--{{#with profile}}<a href="{{pathFor 'profile'}}"><i class="fa fa-rocket fa-fw"></i> Developer Profile</a>{{/with}}-->
+                <!--</li>-->
+            <!--{{else}}-->
+                <!--<li>-->
+                    <!--<a href="{{pathFor 'profileNew'}}"><i class="fa fa-rocket fa-fw"></i> Create Developer Profile</a>-->
+                <!--</li>-->
             {{/if}}
-            <li>
-                <a href="#" id="userProfile"><i class="fa fa-user fa-fw"></i> User Profile</a>
-            </li>
+            <li class="{{isActiveRoute regex='^setup$'}}"><a href="{{pathFor 'schoolSetup'}}">Préférences</a></li>
+            <!--<li>-->
+                <!--<a href="#" id="userProfile"><i class="fa fa-user fa-fw"></i> User Profile</a>-->
+            <!--</li>-->
             <li class="divider"></li>
             <li><a href="#" id="signOut"><i class="fa fa-sign-out fa-fw"></i> Sign Out</a></li>
         </ul>
