--- a/client/views/account_setup/school_setup.html
+++ b/client/views/account_setup/school_setup.html
@@ -21,7 +21,7 @@
 
   <div class="col-md-12 text-center">
     <a href="/" class="btn prev">&lt; Précédent</a>
-    <a href="/mes-tags" class="btn btn-primary next">Suivant ></a>
+    <a href="/ma-recherche" class="btn btn-primary next">Suivant ></a>
   </div>
 </template>
 
