--- a/client/views/account_setup/tags_setup.html
+++ b/client/views/account_setup/tags_setup.html
@@ -17,7 +17,7 @@
   <br/>
 
   <div class="col-md-12 text-center">
-    <a href="/mon-ecole" class="btn prev">&lt; Précédent</a>
+    <a href="/ma-recherche" class="btn prev">&lt; Précédent</a>
     <a href="/mon-alerte-offre" class="btn btn-primary next">Suivant ></a>
   </div>
 </template>
