readme and liscence

--- a/client/views/account_setup/school_setup.html
+++ b/client/views/account_setup/school_setup.html
@@ -23,7 +23,7 @@
 
     <div class="setup__button">
       <!--<a href="/" class="btn prev pull-left">&lt; Précédent</a>-->
-      <a href="/mes-tags" class="btn btn-all pull-right">Suivant</a>
+      <a href="/ma-recherche" class="btn btn-all pull-right">Suivant</a>
     </div>
 
   </div>
