--- a/client/views/account_setup/search_setup.html
+++ b/client/views/account_setup/search_setup.html
@@ -89,7 +89,7 @@
   <br/>
 
   <div class="col-md-12 text-center">
-    <a href="/mes-tags" class="btn prev">&lt; Précédent</a>
-    <a href="/mon-ecole" class="btn btn-primary next">Voir les offres ></a>
+    <a href="/mon-ecole" class="btn prev">&lt; Précédent</a>
+    <a href="/mes-tags" class="btn btn-primary next">Suivant ></a>
   </div>
 </template>
