--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-12 text-center" id="disclaimer">
-				We Work Meteor is an independent entity and has not been authorized, sponsored, or otherwise approved by <a href="http://www.meteor.com/">Meteor Development Group</a>.
+				Made with love by<a href="http://jobteaser.com/">JobTeaser</a>.
 			</div>
 		</div>
 	</footer>
