--- a/client/views/account_setup/tags_setup.html
+++ b/client/views/account_setup/tags_setup.html
@@ -17,15 +17,10 @@
 
     <br/>
 
-<<<<<<< HEAD
     <div class="setup__button">
-      <a href="/mon-ecole" class="btn btn-prev btn-half pull-left">Précédent</a>
+      <a href="/ma-recherche" class="btn btn-prev btn-half pull-left">Précédent</a>
       <a href="/mon-alerte-offre" class="btn btn-next btn-half pull-right">Suivant</a>
     </div>
-=======
-  <div class="col-md-12 text-center">
-    <a href="/ma-recherche" class="btn prev">&lt; Précédent</a>
-    <a href="/mon-alerte-offre" class="btn btn-primary next">Suivant ></a>
->>>>>>> 1985f27bde2bbaab65a6a25d2ce7e47fcea10255
+
   </div>
 </template>
