--- a/client/views/account_setup/alert_setup.html
+++ b/client/views/account_setup/alert_setup.html
@@ -34,6 +34,6 @@
 
   <div class="col-md-12 text-center">
     <a href="/mes-tags" class="btn prev">&lt; Précédent</a>
-    <a href="/offres" class="btn btn-primary next">Voir les offres ></a>
+    <a href="/jobs" class="btn btn-primary next">Voir les offres ></a>
   </div>
 </template>
