--- a/client/views/jobs/job.html
+++ b/client/views/jobs/job.html
@@ -1,4 +1,8 @@
 <template name="job">
+	
+	<a href="/jobs" class="btn btn-default">&lt; retour</a>
+	<br/>
+
 	<div id="job" class="row">
 		<div class="col-sm-12">
 			<div class="panel panel-default">
