--- a/client/views/jobs/jobIncludes.html
+++ b/client/views/jobs/jobIncludes.html
@@ -65,7 +65,8 @@
     {{/if}}
 </template>
 <template name="jobFeatured">
-    {{#if $eq currentUser._id userId}}
+    <!--{{#if $eq currentUser._id userId}}-->
+    {{#if false}}
         {{#unless featured}}
             {{#if featuredAllowed}}
                 <div class="row">
