--- a/client/views/account_setup/tags_setup.html
+++ b/client/views/account_setup/tags_setup.html
@@ -1,8 +1,8 @@
 <template name="tagsSetup">
   <div class="setup">
-    <center>
-      <h1>Ma formation et compétences</h1>
-      <p>Un autre blabla</p>
+    <center class="container">
+      <h1>Tags</h1>
+      <p>Voici une liste de tags pré-remplie basée sur votre profil. Complétez-le avec vos propres tags.</p>
     </center>
 
     <div class="form-container container">
