--- a/client/views/account_setup/search_setup.html
+++ b/client/views/account_setup/search_setup.html
@@ -1,9 +1,12 @@
 <template name="searchSetup">
-
+<div class="setup">
   <center>
-    <h1>Mes critères de recherche</h1>
+    <div class="container">
+      <h1>Mes critères de recherche</h1>
+      <br />
+    </div>
 
-    <div class="form-container">
+    <div class="form-container container">
       <form class="form">
         <label for="year" class="control-label input-group">
           Date de début
@@ -11,17 +14,17 @@
 
         <div class="btn-group" data-toggle="buttons" style="margin: 0 auto;text-align: center;">
 
-          <label class="btn btn-default" style="width: 50%">
+          <label class="btn btn-default btn-half pull-left">
             <input name="year" value="2011" type="radio">Dès que possible
           </label>
-          <label class="btn btn-default active" style="width: 50%">
+          <label class="btn btn-default btn-half pull-right active">
             <input name="year" value="2012" type="radio" class="active">Dans une semaine
           </label>
           <br/>
-          <label class="btn btn-default" style="width: 50%">
+          <label class="btn btn-default btn-half pull-left">
             <input name="year" value="2013" type="radio">Dans un mois
           </label>
-          <label class="btn btn-default" style="width: 50%">
+          <label class="btn btn-default btn-half pull-right">
             <input name="year" value="2011" type="radio">Plus tard
           </label>
         </div>
@@ -31,7 +34,7 @@
 
     <br/>
 
-    <div class="form-container">
+    <div class="form-container container clear">
       <form class="form">
         <label for="year" class="control-label input-group">
           Durée du stage
@@ -39,18 +42,18 @@
 
         <div class="btn-group" data-toggle="buttons" style="margin: 0 auto;text-align: center;">
 
-          <label class="btn btn-default" style="width: 57%">
-            <input name="year" value="2011" type="radio">Peu importe
+          <label class="btn btn-default btn-half pull-left">
+            <input name="year" value="2011" type="radio">1 à 2 mois
           </label>
-          <label class="btn btn-default active" style="width: 43%">
-            <input name="year" value="2012" type="radio" class="active">1 mois
+          <label class="btn btn-default btn-half pull-right active">
+            <input name="year" value="2012" type="radio" class="active">3 à 4 mois
           </label>
           <br/>
-          <label class="btn btn-default" style="width: 38%">
-            <input name="year" value="2013" type="radio">3 mois
+          <label class="btn btn-default btn-half pull-left">
+            <input name="year" value="2013" type="radio">5 à 6 mois
           </label>
-          <label class="btn btn-default" style="width: 62%">
-            <input name="year" value="2011" type="radio">Plus de 3 mois
+          <label class="btn btn-default btn-half pull-right">
+            <input name="year" value="2011" type="radio">Plus de 6 mois
           </label>
         </div>
         <!--<button type="submit" class="btn btn-default">Submit</button>-->
@@ -59,7 +62,7 @@
 
     <br/>
 
-    <div class="form-container">
+    <div class="form-container container clear">
       <form class="form">
         <label for="year" class="control-label input-group">
           Ville
@@ -67,17 +70,17 @@
 
         <div class="btn-group" data-toggle="buttons" style="margin: 0 auto;text-align: center;">
 
-          <label class="btn btn-default" style="width: 65%">
+          <label class="btn btn-default btn-half pull-left">
             <input name="year" value="2011" type="radio">Peu importe
           </label>
-          <label class="btn btn-default active" style="width: 35%">
+          <label class="btn btn-default btn-half pull-right active">
             <input name="year" value="2012" type="radio" class="active">Paris
           </label>
           <br/>
-          <label class="btn btn-default" style="width: 35%">
+          <label class="btn btn-default btn-half pull-left">
             <input name="year" value="2013" type="radio">Lyon
           </label>
-          <label class="btn btn-default" style="width: 65%">
+          <label class="btn btn-default btn-half pull-right">
             <input name="year" value="2011" type="radio">A l'étranger
           </label>
         </div>
@@ -88,8 +91,9 @@
 
   <br/>
 
-  <div class="col-md-12 text-center">
-    <a href="/mon-ecole" class="btn prev">&lt; Précédent</a>
-    <a href="/mes-tags" class="btn btn-primary next">Suivant ></a>
+  <div class="setup__button">
+    <a href="/mon-ecole" class="btn btn-prev btn-half pull-left">Précédent</a>
+    <a href="/mes-tags" class="btn btn-next btn-half pull-right">Suivant</a>
   </div>
+</div>
 </template>
