--- a/client/views/account_setup/tags_setup.html
+++ b/client/views/account_setup/tags_setup.html
@@ -1,26 +1,35 @@
 <template name="tagsSetup">
-  <div class="setup">
-    <center>
-      <h1>Ma formation et compétences</h1>
-      <p>Un autre blabla</p>
-    </center>
 
-    <div class="form-container container">
-      <select id="tags" name="tags" multiple="multiple" class="demo-default selectized"
-              style="margin: 0 auto;max-width: 600px;" placeholder="tag...">
+  <center>
+    <h1>Ma formation et compétences</h1>
+  </center>
 
-        {{#each tags}}
-          <option value="{{name}}">{{name}}</option>
-        {{/each}}
-      </select>
-    </div>
+  <div class="form-container">
+    <select id="tags" name="tags" multiple="multiple" class="demo-default selectized"
+            style="margin: 0 auto;max-width: 600px;" placeholder="tag...">
 
-    <br/>
+      <option value="ingénieur" selected="selected">ingénieur</option>
+      <option value="3d" selected="selected">3d</option>
+      <option value="web" selected="selected">web</option>
+      <option value="développement" selected="selected">développement</option>
+      <option value="ux" selected="selected">ux</option>
+      <option value="design" selected="selected">design</option>
+      <option value="réalité virtuelle" selected="selected">réalité virtuelle</option>
+      <option value="interface" selected="selected">interface</option>
+      <option value="ergonomie" selected="selected">ergonomie</option>
+      <option value="c++" selected="selected">c++</option>
+      <option value="openGL" selected="selected">openGL</option>
+      <option value="2d" selected="selected">2d</option>
+      {{#each tags}}
+        <option value="{{name}}">{{name}}</option>
+      {{/each}}
+    </select>
+  </div>
 
-    <div class="setup__button">
-      <a href="/ma-recherche" class="btn btn-prev btn-half pull-left">Précédent</a>
-      <a href="/mon-alerte-offre" class="btn btn-next btn-half pull-right">Suivant</a>
-    </div>
+  <br/>
 
+  <div class="col-md-12 text-center">
+    <a href="/ma-recherche" class="btn prev">&lt; Précédent</a>
+    <a href="/mon-alerte-offre" class="btn btn-primary next">Suivant ></a>
   </div>
 </template>
