fix couleurs btn default

--- a/client/views/account_setup/search_setup.html
+++ b/client/views/account_setup/search_setup.html
@@ -89,9 +89,7 @@
     </div>
   </center>
 
-  <br/>
-
-  <div class="setup__button">
+  <div class="setup__button-no-fixed">
     <a href="/mon-ecole" class="btn btn-prev btn-half pull-left">Précédent</a>
     <a href="/mes-tags" class="btn btn-next btn-half pull-right">Suivant</a>
   </div>
