--- a/client/views/main.less
+++ b/client/views/main.less
@@ -204,7 +204,8 @@ html,
   }
 }
 @media screen and (min-width: 600px) {
-  .homepage-content {
+  .homepage-content,
+  .container-form {
     max-width: 600px;
     margin: auto;
   }
@@ -286,6 +287,10 @@ html,
     a {
       color: #d9aaec;
     }
+  }
+  .container-form-padding {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
