--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -1,5 +1,6 @@
 <template name="footer">
-{{#if showHeaderFooter}}
+<!--{{#if showHeaderFooter}}-->
+{{#if false}}
 	<footer class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 text-center">
