--- a/client/views/main.less
+++ b/client/views/main.less
@@ -178,6 +178,18 @@ html,
 .clear {
   clear: both;
 }
+.navbar-header {
+  background: #8d5ca1;
+}
+.navbar-brand {
+  font-family: 'Dancing Script', cursive;
+  font-size: 28px;
+  text-transform: inherit;
+}
+.navbar-default .navbar-brand,
+.navbar-default .navbar-brand:hover {
+  color: white;
+}
 .homepage {
   height: 100%;
   &__tagline {
@@ -431,5 +443,37 @@ a.btn.prev:hover {
   .btn {
     font-size: 13px;
     padding: 8px 0;
+  }
+}
+
+
+// job offers
+.job-offers {
+  &__list {
+    position: relative;
+  }
+  &__subtitle {
+    clear: both;
+    margin-top: 10px;
+    font-size: 13px;
+    i {
+      width: 20px;
+    }
+  }
+  &__title {
+    font-size: 18px;
+    color: #8d5ca1;
+    margin-bottom: 10px;
+  }
+  &__pourcent {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    border: 4px dotted #8d5ca1;
+    padding: 10px 0;
+    text-align: center;
   }
 }
