--- a/client/views/main.less
+++ b/client/views/main.less
@@ -477,3 +477,30 @@ a.btn.prev:hover {
     text-align: center;
   }
 }
+
+// job offer page
+.job-offer-page {
+  h2 {
+    margin-top: 0;
+    font-size: 22px;
+  }
+  &__labels {
+    font-size: 13px;
+    word-break: break-all;
+    i {
+      width: 22px;
+      text-align: left;
+    }
+    a {
+      color: #8d5ca1;
+    }
+  }
+  .btn-all {
+    width: 100%;
+    margin: 20px 0;
+    background-color: #8d5ca1;
+    padding: 14px 0;
+    font-size: 16px;
+    border: 0;
+  }
+}
