--- a/client/views/jobs/job.html
+++ b/client/views/jobs/job.html
@@ -1,6 +1,6 @@
 <template name="job">
-
-	<a href="/jobs" class="btn btn-default">&lt; retour</a>
+<div class="job-offer-page">
+	<a href="/jobs">&lt; retour</a>
 	<br/>
 
 	<div id="job" class="row">
@@ -10,7 +10,7 @@
 					{{>jobExpiredAlert}}
 					{{#if isInRole 'admin'}}
 					    {{>jobAdminEditLink}}
-					    {{>jobStatusToggle}}  
+					    {{>jobStatusToggle}}
 					    {{>jobSuggestedTweet}}
 					{{/if}}
 					{{>jobStatusAlert}}
@@ -22,46 +22,51 @@
 							</h2>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-sm-3">
+					<div class="job-offer-page__labels">
+						<table cellpadding="0" cellspacing="0" border="0" width="100%">
 							{{#if company}}
-								<i class="fa fa-building fa-fw"></i> {{company}}
+							<tr>
+								<td valign="top"><i class="fa fa-building fa-fw"></i> </td>
+								<td>{{company}}</td>
+							</tr>
 							{{/if}}
-						</div>
-						<div class="col-sm-3">
 							{{#if location}}
-								<i class="fa fa-map-marker"></i> {{location}}
+							<tr>
+								<td valign="top"><i class="fa fa-map-marker"></i></td>
+								<td>{{location}}</td>
+							</tr>
 							{{/if}}
-						</div>
-						<div class="col-sm-6 job-url">
 							{{#if url}}
-								<i class="fa fa-external-link fa-m"></i>&nbsp;&nbsp;<a href="{{url}}" target="_blank">{{cutString url 50}}</a>
+							<tr>
+								<td valign="top"><i class="fa fa-external-link fa-m"></i></td>
+								<td><a href="{{url}}" target="_blank">{{cutString url 50}}</a></td>
+							</tr>
 							{{/if}}
-						</div>
-					</div>
-					<hr>
-					<div class="row">
-						<div class="col-sm-3">
-							{{>jobLabels}}
-							{{#if hasLabel}}
-								<hr>
-							{{/if}}
-							{{#if contact}}
-								<i class="fa fa-envelope fa-fw"></i> {{contact}}
-								<hr>
-							{{/if}}
-							<i class="fa fa-calendar fa-fw"></i> Posted on {{formatDate createdAt}}
+							<tr>
+								<td valign="top"><i class="fa fa-calendar fa-fw"></i></td>
+								<td>Posted on {{formatDate createdAt}}</td>
+							</tr>
 							{{#if featured}}
-							<hr>
-							<i class="fa fa-trophy fa-fw"></i> Featured Until {{formatDate featuredThrough}}
+							<tr>
+								<td valign="top"><i class="fa fa-trophy fa-fw"></i></td>
+								<td>Featured Until {{formatDate featuredThrough}}</td>
+							</tr>
 							{{/if}}
-						</div>
+						</table>
+					</div>
+
+					<a class="btn btn-default btn-all">
+						Postuler
+					</a>
+
+					<div class="row">
 						<div class="col-sm-9">
 							{{#if htmlDescription}}
 								{{{htmlDescription}}}
 							{{/if}}
 						</div>
 					</div>
+
 					<div class="row">
 						<div class="col-xs-12">
 							{{#if $eq userId $.Meteor.userId}}
@@ -81,8 +86,15 @@
 							{{/if}}
 						</div>
 					</div>
+
+					<a class="btn btn-default btn-all">
+						Postuler
+					</a>
+
+
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 </template>
