--- a/client/views/jobs/job.html
+++ b/client/views/jobs/job.html
@@ -1,6 +1,6 @@
 <template name="job">
 <div class="job-offer-page">
-	<a href="/jobs">&lt; retour</a>
+	<a href="/jobs" style="color: #8d5ca1;">&lt; retour</a>
 	<br/>
 
 	<div id="job" class="row">
