--- a/client/views/main.less
+++ b/client/views/main.less
@@ -504,3 +504,20 @@ a.btn.prev:hover {
     border: 0;
   }
 }
+
+//hack
+.help-block {
+  display: none !important;
+}
+.has-error {
+  border: none;
+  box-shadow: none;
+  .form-control:focus {
+    outline: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+  }
+}
+#connection-lost-banner {
+  display: none;
+}
